# near-drop

./: Cargo.toml  README.md
integration-tests/src/: near.ava.ts
src/: claim.rs  constants.rs  drop_types.rs  ft.rs  ft_drop.rs  lib.rs  near_drop.rs  nft_drop.rs  storage.rs  token.rs
tests/: init.rs  main.rs  utils.rs
tests/contracts/ft/res/: fungible_token.wasm
tests/contracts/nft/res/: non_fungible_token.wasm
tests/contracts/root/: Cargo.toml
tests/contracts/root/res/: root.wasm
tests/contracts/root/src/: lib.rs
tests/tests/: ft.rs  mod.rs  near.rs  nft.rs
