[package]
name = "near_drops"
version = "1.0.0"
authors = ["Guillermo Gallardo <guillermo@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.7.0"
near-contract-standards = "5.7.0"
serde_json = "1.0.91"
# borsh = "1.5.3"

[dev-dependencies] 
near-sdk = { version = "5.6.0", features = ["unit-testing"] }
near-workspaces = { version = "0.14.1", features = ["unstable"] }
anyhow = "1.0"
tokio = { version = "1.41.0", features = ["full"] }
